force-app/main/default/objects/RT_Price_BookHistory__c/RT_Price_BookHistory__c.object-meta.xml
<CustomObject>
    <label>REV Price Book History</label>
    <nameField>
        <displayFormat>PPIH-{0000000}</displayFormat>
        <label>Price Index</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>REV Price Books History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>