force-app/main/default/objects/RT_Price_BookHistory__c/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Price Book Created By ID</inlineHelpText>
    <label>Price Book Created By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Price_Book_History</relationshipName>
    <type>Lookup</type>
</CustomField>