force-app/main/default/objects/RT_Price_BookHistory__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <inlineHelpText>Price Book Created Date</inlineHelpText>
    <label>Price Book Created Date</label>
    <type>DateTime</type>
</CustomField>