force-app/main/default/objects/RT_Price_BookHistory__c/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Book Deleted</label>
    <type>Checkbox</type>
</CustomField>