force-app/main/default/objects/RT_Price_BookHistory__c/fields/LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LastActivityDate__c</fullName>
    <inlineHelpText>Price Book Last Activity Date</inlineHelpText>
    <label>Price Book Last Activity Date</label>
    <type>Date</type>
</CustomField>