force-app/main/default/objects/RT_Price_BookHistory__c/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Price Book Last Modified By ID</inlineHelpText>
    <label>Price Book Last Modified By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Price_Book_History1</relationshipName>
    <type>Lookup</type>
</CustomField>