force-app/main/default/objects/RT_Price_BookHistory__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <inlineHelpText>Price Book Last Modified Date</inlineHelpText>
    <label>Price Book Last Modified Date</label>
    <type>DateTime</type>
</CustomField>