force-app/main/default/objects/RT_Price_BookHistory__c/fields/LastReferencedDate__c.field-meta.xml
<CustomField>
    <fullName>LastReferencedDate__c</fullName>
    <inlineHelpText>Price Book Last Referenced Date</inlineHelpText>
    <label>Price Book Last Referenced Date</label>
    <type>DateTime</type>
</CustomField>