force-app/main/default/objects/RT_Price_BookHistory__c/fields/LastViewedDate__c.field-meta.xml
<CustomField>
    <fullName>LastViewedDate__c</fullName>
    <inlineHelpText>Price Book Last Viewed Date</inlineHelpText>
    <label>Price Book Last Viewed Date</label>
    <type>DateTime</type>
</CustomField>