force-app/main/default/objects/RT_Price_BookHistory__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Price_Book_History3</relationshipName>
    <type>Lookup</type>
</CustomField>