force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Afternoon_Indication__c.field-meta.xml
<CustomField>
    <fullName>RE_Afternoon_Indication__c</fullName>
    <label>Afternoon Indication</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>