force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_ApprovalProcess__c.field-meta.xml
<CustomField>
    <fullName>RE_ApprovalProcess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Process</label>
    <referenceTo>RT_Setting__c</referenceTo>
    <relationshipLabel>REV Price Books History</relationshipLabel>
    <relationshipName>REV_Price_Books1History</relationshipName>
    <type>Lookup</type>
</CustomField>