force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>RE_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>REV_Price_Books1History</relationshipName>
    <type>Lookup</type>
</CustomField>