force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>RE_Approver_Comments__c</fullName>
    <label>Approver Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>