force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Backstop_Margin__c.field-meta.xml
<CustomField>
    <fullName>RE_Backstop_Margin__c</fullName>
    <label>Backstop Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>