force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_BDF__c.field-meta.xml
<CustomField>
    <fullName>RE_BDF__c</fullName>
    <label>BDF</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>