force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_CBU_Last_offered__c.field-meta.xml
<CustomField>
    <fullName>RE_CBU_Last_offered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CBU Last offered</label>
    <type>Checkbox</type>
</CustomField>