force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_CBU_LDC__c.field-meta.xml
<CustomField>
    <fullName>RE_CBU_LDC__c</fullName>
    <label>CBU LDC</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>