force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_CBU_valid_from__c.field-meta.xml
<CustomField>
    <fullName>RE_CBU_valid_from__c</fullName>
    <label>CBU valid from</label>
    <type>Date</type>
</CustomField>