force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_CND_Customer_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Customer_Account_Name__c</fullName>
    <formula>RE_Customer_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account Name</label>
    <type>Text</type>
</CustomField>