force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_CND_Rack__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Rack__c</fullName>
    <label>Rack</label>
    <length>100</length>
    <type>Text</type>
</CustomField>