force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Contract_Master__c.field-meta.xml
<CustomField>
    <fullName>RE_Contract_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RE Contract Master</label>
    <referenceTo>REV_Contract_Master__c</referenceTo>
    <relationshipLabel>REV Price Books History(RE Contract Master)</relationshipLabel>
    <relationshipName>REV_Price_BooksHistory</relationshipName>
    <type>Lookup</type>
</CustomField>