force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Custom_Opp_Approve__c.field-meta.xml
<CustomField>
    <fullName>RE_Custom_Opp_Approve__c</fullName>
    <label>RE Custom Opp Approve</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Submitted STL</fullName>
            </value>
            <value>
                <fullName>Support STL</fullName>
            </value>
            <value>
                <fullName>Support PM</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Auto Approved</fullName>
            </value>
            <value>
                <fullName>Ready to Upload</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Upload not allowed</fullName>
            </value>
            <value>
                <fullName>Submitted PM</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Redundant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>