force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>RE_Customer_Group__c</fullName>
    <formula>RE_Customer_Name__r.RE_Customer_Group__r.Value__c</formula>
    <label>Customer Group</label>
    <type>Text</type>
</CustomField>