force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>RE_Customer_Number__c</fullName>
    <formula>RE_Customer_Name__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Number</label>
    <type>Text</type>
</CustomField>