force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Customer_Type__c</fullName>
    <formula>TEXT(RE_Contract_Master__r.RE_Customer_Name__r.Type)</formula>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>