force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_D_1_UC3__c.field-meta.xml
<CustomField>
    <fullName>RE_D_1_UC3__c</fullName>
    <label>D-1 UC3</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>