force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_DFOA_Charges__c.field-meta.xml
<CustomField>
    <fullName>RE_DFOA_Charges__c</fullName>
    <label>DFOA Charges</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>