force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_End_date__c.field-meta.xml
<CustomField>
    <fullName>RE_End_date__c</fullName>
    <label>End date</label>
    <type>Date</type>
</CustomField>