force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Excise_tax__c.field-meta.xml
<CustomField>
    <fullName>RE_Excise_tax__c</fullName>
    <label>Excise tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>