force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Final_Price_Rebate__c.field-meta.xml
<CustomField>
    <fullName>RE_Final_Price_Rebate__c</fullName>
    <label>Final Price Rebate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>