force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_First_Calculated_Value__c.field-meta.xml
<CustomField>
    <fullName>RE_First_Calculated_Value__c</fullName>
    <label>First Calculated Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>