force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Forecast_Margin_Above_MC__c.field-meta.xml
<CustomField>
    <fullName>RE_Forecast_Margin_Above_MC__c</fullName>
    <label>Forecast Margin Above MC</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>