force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Forecast_Margin_on_MC__c.field-meta.xml
<CustomField>
    <fullName>RE_Forecast_Margin_on_MC__c</fullName>
    <formula>IF(NOT(ISBLANK(RE_Margin_on_MC__c)), RE_Margin_on_MC__c - RE_Afternoon_Indication__c, null)</formula>
    <label>Forecast Margin Above MC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>