force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Frequency_record__c.field-meta.xml
<CustomField>
    <fullName>RE_Frequency_record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frequency record</label>
    <type>Checkbox</type>
</CustomField>