force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Fx_Rate__c.field-meta.xml
<CustomField>
    <fullName>RE_Fx_Rate__c</fullName>
    <label>Fx Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>