force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_Invoice_Price__c</fullName>
    <label>Invoice Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>