force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Is_Latest__c.field-meta.xml
<CustomField>
    <fullName>RE_Is_Latest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Latest</label>
    <type>Checkbox</type>
</CustomField>