force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Job_Counter__c.field-meta.xml
<CustomField>
    <fullName>RE_Job_Counter__c</fullName>
    <label>Job Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>