force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Latest_price_dt__c.field-meta.xml
<CustomField>
    <fullName>RE_Latest_price_dt__c</fullName>
    <description>latest price date and time</description>
    <inlineHelpText>based on the latest price date and time record will be displayed in the CO dashboard</inlineHelpText>
    <label>Latest price dt</label>
    <type>DateTime</type>
</CustomField>