force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Margin_above_AfterNoon_Indication__c.field-meta.xml
<CustomField>
    <fullName>RE_Margin_above_AfterNoon_Indication__c</fullName>
    <formula>RE_Final_Price_Rebate__c - RE_MIDday_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin above AfterNoon Indication</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>