force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Margin_above_MC__c.field-meta.xml
<CustomField>
    <fullName>RE_Margin_above_MC__c</fullName>
    <label>Margin above MC</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>