force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_MidDay_output_date__c.field-meta.xml
<CustomField>
    <fullName>RE_MidDay_output_date__c</fullName>
    <label>MidDay output date</label>
    <type>Date</type>
</CustomField>