force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Pricing_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_Pricing_Date__c</fullName>
    <label>Pricing Date</label>
    <type>DateTime</type>
</CustomField>