force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Reference_Period__c.field-meta.xml
<CustomField>
    <fullName>RE_Reference_Period__c</fullName>
    <description>Reference Period used for calculation</description>
    <label>Reference Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>