force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_RefUC3_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_RefUC3_Price__c</fullName>
    <label>RefUC3 Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>