force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Std_Disc__c.field-meta.xml
<CustomField>
    <fullName>RE_Std_Disc__c</fullName>
    <label>Std Disc(Tier based)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>