force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Submitter__c.field-meta.xml
<CustomField>
    <fullName>RE_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>REV_Price_BooksHistory</relationshipName>
    <type>Lookup</type>
</CustomField>