force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Temp_Discount__c.field-meta.xml
<CustomField>
    <fullName>RE_Temp_Discount__c</fullName>
    <formula>IF(ISBLANK(RE_List_Price__c ), 0, RE_List_Price__c ) - IF(ISBLANK(RE_Final_Price_Rebate__c), 0, RE_Final_Price_Rebate__c) - IF(ISBLANK(RE_Std_Disc__c), 0 , RE_Std_Disc__c) +  IF(ISBLANK(RE_Transport_Charge__c), 0 , RE_Transport_Charge__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temp Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>