force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_UoM__c.field-meta.xml
<CustomField>
    <fullName>RE_UoM__c</fullName>
    <label>UoM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>