force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Validation_1_Value__c.field-meta.xml
<CustomField>
    <fullName>RE_Validation_1_Value__c</fullName>
    <label>Validation 1 Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>