force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_Varkey_Reseller__c.field-meta.xml
<CustomField>
    <fullName>RE_Varkey_Reseller__c</fullName>
    <formula>RE_Customer_Name__r.RE_Sales__r.Value__c + &apos;00&apos;+  RE_Customer_Name__r.Sold_To_Number__c  + RT_Location__r.RE_Location_Code__c + &apos;000000000&apos; + RT_Product__r.RE_Material__c</formula>
    <label>Varkey Reseller</label>
    <type>Text</type>
</CustomField>