force-app/main/default/objects/RT_Price_BookHistory__c/fields/RE_W_1_UC3__c.field-meta.xml
<CustomField>
    <fullName>RE_W_1_UC3__c</fullName>
    <label>W-1 UC3</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>