force-app/main/default/objects/RT_Price_BookHistory__c/fields/RT_CRP__c.field-meta.xml
<CustomField>
    <fullName>RT_CRP__c</fullName>
    <label>CRP</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>