force-app/main/default/objects/RT_Price_BookHistory__c/fields/RT_Cur__c.field-meta.xml
<CustomField>
    <fullName>RT_Cur__c</fullName>
    <description>currency type</description>
    <label>Cur.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>