force-app/main/default/objects/RT_Price_BookHistory__c/fields/RT_KDV__c.field-meta.xml
<CustomField>
    <fullName>RT_KDV__c</fullName>
    <label>KDV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>