force-app/main/default/objects/RT_Price_BookHistory__c/fields/RT_Key_Value__c.field-meta.xml
<CustomField>
    <fullName>RT_Key_Value__c</fullName>
    <description>to Store Aureus key values</description>
    <label>Key Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>