force-app/main/default/objects/RT_Price_BookHistory__c/fields/RT_Location__c.field-meta.xml
<CustomField>
    <fullName>RT_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>RE_Location__c</referenceTo>
    <relationshipName>Product_Price_BooksHistory</relationshipName>
    <type>Lookup</type>
</CustomField>