force-app/main/default/objects/RT_Price_BookHistory__c/fields/RT_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>RT_Location_Code__c</fullName>
    <formula>RT_Location__r.RE_Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Code</label>
    <type>Text</type>
</CustomField>