force-app/main/default/objects/RT_Price_BookHistory__c/fields/RT_MP__c.field-meta.xml
<CustomField>
    <fullName>RT_MP__c</fullName>
    <label>MP</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>