force-app/main/default/objects/RT_Price_BookHistory__c/fields/RT_NET_SIP__c.field-meta.xml
<CustomField>
    <fullName>RT_NET_SIP__c</fullName>
    <label>NET_SIP</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>