force-app/main/default/objects/RT_Price_BookHistory__c/fields/RT_Product__c.field-meta.xml
<CustomField>
    <fullName>RT_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>RE_Product__c</referenceTo>
    <relationshipName>Product_Price_BooksHistory</relationshipName>
    <type>Lookup</type>
</CustomField>