force-app/main/default/objects/RT_Price_BookHistory__c/fields/RT_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>RT_Product_Code__c</fullName>
    <formula>RT_Product__r.RT_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>