force-app/main/default/objects/RT_Price_BookHistory__c/fields/SystemModstamp__c.field-meta.xml
<CustomField>
    <fullName>SystemModstamp__c</fullName>
    <inlineHelpText>Price Book System Modstamp</inlineHelpText>
    <label>Price Book System Modstamp</label>
    <type>DateTime</type>
</CustomField>