force-app/main/default/objects/RT_Price_BookHistory__c/recordTypes/Canada_SFJ_Price.recordType-meta.xml
<RecordType>
    <fullName>Canada_SFJ_Price</fullName>
    <active>true</active>
    <label>Canada SFJ Price</label>
</RecordType>