force-app/main/default/objects/RT_Price_BookHistory__c/recordTypes/Depot_Prices.recordType-meta.xml
<RecordType>
    <fullName>Depot_Prices</fullName>
    <active>true</active>
    <description>Depot Prices are calculated here</description>
    <label>Depot Price (CF Depot Price Data)</label>
</RecordType>