force-app/main/default/objects/RT_Price_BookHistory__c/recordTypes/MY_Price_Book.recordType-meta.xml
<RecordType>
    <fullName>MY_Price_Book</fullName>
    <active>true</active>
    <label>MY Price Book</label>
</RecordType>