force-app/main/default/objects/RT_Price_BookHistory__c/recordTypes/PH_Price_Book.recordType-meta.xml
<RecordType>
    <fullName>PH_Price_Book</fullName>
    <active>true</active>
    <label>PH Price Book</label>
</RecordType>