force-app/main/default/objects/RT_Price_BookHistory__c/recordTypes/Retail_Prices.recordType-meta.xml
<RecordType>
    <fullName>Retail_Prices</fullName>
    <active>true</active>
    <description>Retail Outlet Prices</description>
    <label>Retail Price (FBS Data)</label>
</RecordType>