force-app/main/default/objects/RT_Price_BookHistory__c/listViews/RE_customer_Opps_RT_Price_Book.listView-meta.xml
<ListView>
    <fullName>RE_customer_Opps_RT_Price_Book</fullName>
    <filterScope>Queue</filterScope>
    <label>RE customer Opps</label>
    <queue>RE_customer_Opps</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>